WEB-9710: fix post hero overflow content padding top

--- a/scss/partials/_columns.scss
+++ b/scss/partials/_columns.scss
@@ -14,7 +14,7 @@
   }
 
   &--post-hero {
-    padding-top: 9.6rem;
+    padding-top: 7.6rem;
     
     @include breakpoint(desktop) {
       grid-template-columns: calc(min(62.5rem, 50%)) auto;
@@ -22,7 +22,7 @@
       margin-left: auto;
       margin-right: auto;
       max-width: 144rem;
-      padding-top: 27.4rem;
+      padding-top: 12.9rem;
     }
 
     @include grid();
